unpackaged/main/default/objects/CS_DFP_Actuals_By_Hour_Report_Data__c/CS_DFP_Actuals_By_Hour_Report_Data__c.object-meta.xml
<CustomObject>
    <label>DFP Actuals By Hour Report Data</label>
    <nameField>
        <displayFormat>DFPAH-{00000000}</displayFormat>
        <label>DFP Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFP Actuals By Hour Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>