unpackaged/main/default/objects/CS_DFP_Actuals_By_Hour_Report_Data__c/fields/Custom_Report_Execution__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Report Execution</label>
    <referenceTo>csdf__Custom_Report_Execution__c</referenceTo>
    <relationshipName>DFP_Actuals_By_Hour</relationshipName>
    <type>Lookup</type>
</CustomField>