unpackaged/main/default/objects/CS_DFP_Actuals_By_Hour_Report_Data__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <description>The hour in which the impressions were delivered (in GMT)</description>
    <inlineHelpText>The hour in which the impressions were delivered (in GMT)</inlineHelpText>
    <label>Hour</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>