unpackaged/main/default/objects/CS_DFP_Actuals_By_Hour_Report_Data__c/fields/Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>