unpackaged/main/default/objects/CS_DFP_Actuals_By_Hour_Report_Data__c/fields/Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions__c</fullName>
    <label>Total Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>